Updated iframe style

--- a/iframe.html
+++ b/iframe.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
   <head>
     <style>
@@ -18,9 +18,12 @@ body{
 }
 
 iframe{
-  margin: 0;
   padding: 0;
-  border: none;
+  margin-right: 0;
+  margin-top: 3px;
+  margin-bottom: 0;
+  margin-left: 3px;
+  border: 1px solid purple;
 }
     </style>
   </head>
