--- a/iframe.html
+++ b/iframe.html
@@ -6,7 +6,7 @@ html{
   background-color: pink;
 }
 
-body{
+div{
   margin: 0;
   padding: 0;
   display: flex;
@@ -27,10 +27,15 @@ iframe{
 }
     </style>
   </head>
-  <body>
-    <iframe src="index.html?field=1/1" width="1176" height="168"></iframe>
-    <iframe src="index.html?field=1/2" width="1176" height="168"></iframe>
-    <iframe src="index.html?field=1/3" width="896" height="128"></iframe>
-    <iframe src="index.html?field=1/4" width="896" height="128"></iframe>
-  </body>
+  <div>
+    <body>
+      <iframe src="index.html?field=1/1" width="896" height="128"></iframe>
+      <iframe src="index.html?field=1/2" width="1176" height="168"></iframe>
+      <iframe src="index.html?field=1/3" width="896" height="128"></iframe>
+
+      <iframe src="index.html?field=2/1" width="896" height="128"></iframe>
+      <iframe src="index.html?field=2/2" width="1176" height="168"></iframe>
+      <iframe src="index.html?field=2/3" width="896" height="128"></iframe>
+    </body>
+  </div>
 </html>
